style: added fix for toast message overflow due to long string.

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -227,7 +227,8 @@
 
 .toast-message {
 	color: var(--font-color);
-	overflow-wrap: break-word;
+	/* overflow-wrap: break-word; */
+	word-break: break-all;
 }
 
 .show-toast {
